--- a/WebContent/NewFile.html
+++ b/WebContent/NewFile.html
@@ -5,8 +5,10 @@
 <title>Insert title here</title>
 </head>
 <body>
-damn nigga !
-  </br> 
-  you scary
+so nigga !
+  <br /> 
+  such scary
+  <br />
+  doge
 </body>
 </html>
